--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,95 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url("https://fonts.googleapis.com/css?family=Nunito");
 
 // Variables
-@import 'variables';
+@import "variables";
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+    padding: 0;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    outline: none;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+}
+:root {
+    --primary1: #15172b;
+    --primary2: #262a41;
+    --customblue: #0026ff;
+    --custompink: #ff3250;
+    --customeyellow: #ffbb00;
+    --customgreen: #07e642;
+    --custompurple: #894fc6;
+    --customdarkblue: #121432;
+    --white: #ffffff;
+    --customgrey: #707070;
+    --customgreen1: #15d4a1;
+}
+body {
+    color: white;
+    position: relative;
+    background-color: var(--primary1);
+    &::-webkit-scrollbar {
+        display: none;
+        scrollbar-width: 0px;
+    }
+}
+img {
+    user-select: none;
+}
+.gcontainer {
+    #body {
+        display: grid;
+        // A destra sarà di 40% e a sinistra di 60%
+        grid-template-columns: 40% 60%;
+        //Seleziono le aree dove applicarlo,
+        grid-template-areas: "Left Right";
+        padding: 16px;
+        #left {
+            color: red;
+            grid-area: Left;
+            padding: 15%;
+            position: relative;
+            .hamburger {
+                position: absolute;
+                top: 0%;
+                left: 2%;
+                cursor: pointer;
+            }
+            .profile {
+                margin: 5px;
+                h1 {
+                    font-size: 35px;
+                    color: var(--white);
+                    font-weight: 500;
+                    text-transform: capitalize;
+                }
+            }
+        }
+        // #right {
+        //     position: relative;
+        //     grid-area: Right;
+        //     background-color: #fff;
+        //     border-radius: 15px;
+
+        //     padding-top: 65px;
+        //     padding-bottom: 85px;
+        //     padding-left: 70px;
+        //     padding-right: 20px;
+        // }
+    }
+}
