--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -51,6 +51,17 @@ body {
 img {
     user-select: none;
 }
+.middle {
+    transition: 0.05s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 1;
+}
 .gcontainer {
     #body {
         display: grid;
@@ -60,7 +71,7 @@ img {
         grid-template-areas: "Left Right";
         padding: 16px;
         #left {
-            color: red;
+            color: white;
             grid-area: Left;
             padding: 15%;
             position: relative;
@@ -77,6 +88,45 @@ img {
                     color: var(--white);
                     font-weight: 500;
                     text-transform: capitalize;
+                }
+                h2 {
+                    font-size: 16px;
+                    color: var(--customgrey);
+                    font-weight: 300;
+                }
+            }
+            //**I know Bootstrap or Tailwind exist, but this is literally how to do an input step by step**
+            //First modify the div container
+            .search {
+                border: unset;
+                border-radius: 15px;
+                padding: 17px 25px;
+                margin-top: 40px;
+                background-color: #70707050;
+                position: relative;
+                height: 53px;
+                margin-bottom: 35px;
+                //The icon
+                i {
+                    @extend .middle;
+                    opacity: 1;
+                    left: 25px;
+                    cursor: pointer;
+                }
+                //Then the input
+                input {
+                    color: white;
+                    border: unset;
+                    padding: 0.2em;
+                    background-color: transparent;
+                    width: 100%;
+                    caret-color: var(--white);
+                    //with placeholder
+                    &::placeholder {
+                        background-color: unset;
+                        color: var(--customgrey);
+                        font-size: 14px;
+                    }
                 }
             }
         }
