--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -69,7 +69,7 @@ img {
         grid-template-columns: 40% 60%;
         //Seleziono le aree dove applicarlo,
         grid-template-areas: "Left Right";
-        padding: 16px;
+        padding: 14px;
         #left {
             color: white;
             grid-area: Left;
@@ -79,10 +79,9 @@ img {
                 position: absolute;
                 top: 0%;
                 left: 2%;
-                cursor: pointer;
             }
             .profile {
-                margin: 5px;
+                margin-top: 5px;
                 h1 {
                     font-size: 35px;
                     color: var(--white);
@@ -129,17 +128,89 @@ img {
                     }
                 }
             }
+            .project {
+                margin-bottom: 70px;
+                h3 {
+                    font-size: 20px;
+                    color: white;
+                    span {
+                        font-size: 14px;
+                        color: var(--customgrey);
+                    }
+                }
+                .projects {
+                    margin-top: 27px;
+                    display: grid;
+                    grid-template-columns: repeat(3, 112px);
+                    grid-auto-flow: dense;
+                    .a-project {
+                        border-radius: 1em;
+                        background-color: transparent;
+                        margin-bottom: 1em;
+                        padding: 0.5em;
+                        span {
+                            font-size: 17px;
+                            font-size: 900;
+                            color: white;
+                        }
+                        div.box-color {
+                            height: 100px;
+                            border-radius: 1em;
+                            overflow: hidden;
+                            position: relative;
+                            span {
+                                @extend .middle;
+                                opacity: 1;
+                            }
+                            i {
+                                @extend .middle;
+                                opacity: 1;
+                            }
+                            &:hover {
+                                border: 4px solid var(--custompink);
+                                transition: border 400ms ease;
+                            }
+                        }
+                        &:nth-child(1) {
+                            .box-color {
+                                background-color: var(--customblue);
+                            }
+                        }
+                        &:nth-child(2) {
+                            .box-color {
+                                background-color: var(--custompink);
+                            }
+                        }
+                        &:nth-child(3) {
+                            .box-color {
+                                background-color: var(--customeyellow);
+                            }
+                        }
+                        &:nth-child(4) {
+                            .box-color {
+                                background-color: var(--customgreen);
+                            }
+                        }
+                        &:nth-child(5) {
+                            .box-color {
+                                background-color: var(--custompurple);
+                            }
+                        }
+                        &:nth-child(6) {
+                            .box-color {
+                                background-color: var(--customblue);
+                            }
+                        }
+                    }
+                }
+            }
         }
-        // #right {
-        //     position: relative;
-        //     grid-area: Right;
-        //     background-color: #fff;
-        //     border-radius: 15px;
-
-        //     padding-top: 65px;
-        //     padding-bottom: 85px;
-        //     padding-left: 70px;
-        //     padding-right: 20px;
-        // }
+        #right {
+            position: relative;
+            grid-area: Right;
+            background-color: white;
+            border-radius: 15px;
+            padding: 65px 85px 70px 20px;
+        }
     }
 }
